[features]: added print receipt function
